--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="/assets/css/vs_cdn.css" rel="stylesheet" type="text/css">
 
     <script type="text/javascript" src="/assets/js/core/libraries/jquery.min.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery_ui/core.min.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery_ui/effects.min.js"></script>
-    <script type="text/javascript" src="/assets/js/jquery_ui/interactions.min.js"></script>
+    <script type="text/javascript" src="/assets/js/core/libraries/jquery_ui/core.min.js"></script>
+    <script type="text/javascript" src="/assets/js/core/libraries/jquery_ui/effects.min.js"></script>
+    <script type="text/javascript" src="/assets/js/core/libraries/jquery_ui/interactions.min.js"></script>
     <script type="text/javascript" src="/assets/js/core/libraries/bootstrap.min.js"></script>
     <script type="text/javascript" src="/assets/js/plugins/notifications/pnotify.min.js"></script>
     <script type="text/javascript" src="/assets/js/plugins/notifications/sweet_alert.min.js"></script>
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="/assets/language/KO_Lang.js"></script>
     <script type="text/javascript" src="/assets/language/Current.js"></script>
     <script type="text/javascript" src="/assets/language/CN_Datepicker.js"></script>
+    <script type="text/javascript" src="/assets/js/pages/timelines.js"></script>
 
     <style>
         svg {
